force-app/main/default/objects/Kudo__c/Kudo__c.object-meta.xml
<CustomObject>
    <label>Kudo</label>
    <nameField>
        <displayFormat>KUDO-{0000}</displayFormat>
        <label>Kudo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kudos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>