force-app/main/default/objects/Kudo__c/fields/Badge_Type__c.field-meta.xml
<CustomField>
    <fullName>Badge_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Badge Type</label>
    <referenceTo>Badge_Type__c</referenceTo>
    <relationshipLabel>Kudos</relationshipLabel>
    <relationshipName>Kudos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>