force-app/main/default/objects/Kudo__c/fields/Giver__c.field-meta.xml
<CustomField>
    <fullName>Giver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Giver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Kudos Given</relationshipLabel>
    <relationshipName>Kudos_Given</relationshipName>
    <type>Lookup</type>
</CustomField>