force-app/main/default/objects/Kudo__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Kudos Received</relationshipLabel>
    <relationshipName>Kudos_Received</relationshipName>
    <type>Lookup</type>
</CustomField>